--- a/src/app/shared/components/drive-card/drive-card.component.html
+++ b/src/app/shared/components/drive-card/drive-card.component.html
@@ -7,16 +7,19 @@
         alt="">
     </div>
     <div class="basis-9/12 flex flex-col m-1 justify-between">
-      <div class="">Fecha viaje: {{info.date | date}}</div>
+      <div class="">Fecha viaje: {{info.date | date:'short'}}</div>
       <div class="text-base font-gotham">{{info.driverAvatar.name}}</div>
-      <div>Inicio: {{info.startLocationName}} -
-        Fin: {{info.endLocationName}}</div>
+      <div>Inicio: {{info.startLocationName | slice:0:20 }}</div>
+      <div>Fin: {{info.endLocationName | slice:0:20 }}</div>
     </div>
   </div>
   <div class="flex justify-between items-center gap-2">
     <div class="flex items-center basis-5/12">
       <div *ngFor="let passenger of info.passengerUrls">
         <app-avatar-home [url]="passenger"></app-avatar-home>
+      </div>
+      <div *ngIf="info.passengerUrls.length === 0">
+        Sin pasajeros
       </div>
     </div>
     <div class="basis-3/12">${{info.cost}}</div>
