--- a/src/app/reset-password/reset-password.page.html
+++ b/src/app/reset-password/reset-password.page.html
@@ -13,25 +13,17 @@
       <ion-title size="large">Recuperar Contraseña</ion-title>
     </ion-toolbar>
   </ion-header>
-  <div class="p-2.5 w-full h-full max-w-xs mx-auto flex flex-col ">
-    <form>
-
-      <app-input-text #pw1
-        label="password"
-        placeholder="Nueva password"
-        type="password"></app-input-text>
-      <app-input-text #pw2
-        label="password"
-        placeholder="Confirma tu password"
-        type="password"></app-input-text>
-    </form>
-    <!--    <div *ngIf="formGroup.invalid && (formGroup.dirty || formGroup.touched)">-->
-    <!--      <div *ngIf="formGroup.errors?.['passwordMatch']">-->
-    <!--        Las contraseñas no coinciden-->
-    <!--      </div>-->
-    <!--    </div>-->
-
-    <app-filled-button contentText="Restablecer"></app-filled-button>
+  <div class="p-2.5 w-full h-full max-w-xs mx-auto flex flex-col gap-3 justify-between">
+    <div class="flex flex-col gap-3">
+      <form
+        class="flex flex-col gap-6">
+        <app-input-text #user
+          placeholder="Email"
+          [type]="'email'"></app-input-text>
+      </form>
+    </div>
+    <app-filled-button (onClick)="buttonClick()"
+      class="my-5"
+      contentText="Restablecer"></app-filled-button>
   </div>
-
 </ion-content>
