--- a/src/app/shared/components/multiple-selector-item/multiple-selector-item.component.html
+++ b/src/app/shared/components/multiple-selector-item/multiple-selector-item.component.html
@@ -6,8 +6,10 @@
     }"
 	class="max-w-lg flex items-center h-16">
 	<div class="basis-4/5 gap-2 flex items-center">
-		<ion-icon class="w-12 h-12"
+		<ion-icon *ngIf="item.source === 'ionic'" class="w-12 h-12"
 			[name]="item.icon"></ion-icon>
+		<mat-icon *ngIf="item.source === 'angular'" class="w-12 h-12"
+			[fontIcon]="item.icon"></mat-icon>
 		<div class="text-lg">{{ item.name}}</div>
 	</div>
 	<ion-icon *ngIf="selected"
