fix(profile-page): modify profile page and update dependencies

--- a/src/app/shared/components/drive-card/drive-card.component.html
+++ b/src/app/shared/components/drive-card/drive-card.component.html
@@ -9,7 +9,7 @@
 		<div class="basis-9/12 flex flex-col m-1 justify-between">
 			<div class="flex w-full items-center justify-between">
 			<div class="text-base font-gotham">{{info.driverAvatar.name}}</div>
-			<div>{{info.date | date:'dd MMM HH:mm '}}</div>
+			<div class="text-masterNacho-600">{{info.date | date:'dd MMM HH:mm '}}</div>
 			</div>
 			<div>Inicio: {{info.startLocationName }}</div>
 			<div>Fin: {{info.endLocationName }}</div>
