--- a/src/app/shared/components/app-bar-clone/app-bar-clone.component.html
+++ b/src/app/shared/components/app-bar-clone/app-bar-clone.component.html
@@ -11,7 +11,7 @@
     'pl-4' : leadNameIcon === '',
     'pl-2' : leadNameIcon !== '',
     }"
-		class="basis-6/12 text-xl">{{ label }}</div>
+		class="basis-6/12 text-base">{{ label }}</div>
 	<div
 		[ngClass]="{
     'basis-6/12' : leadNameIcon === '',
