--- a/src/app/shared/components/labeled-icon/labeled-icon.component.html
+++ b/src/app/shared/components/labeled-icon/labeled-icon.component.html
@@ -3,7 +3,12 @@
   'flex-row': position ==='row',
   'flex-col': position ==='col'
 }">
-	<ion-icon class="w-10 h-10 text-green-600"
+	<ion-icon
+		[ngClass]="{
+		'text-green-600': enabled,
+		'text-red-600': !enabled,
+		}"
+		class="w-10 h-10"
 		[name]="iconName"></ion-icon>
 	<div>
 		{{textLabel}}
