fix(misc): modify publish, trip details and add parse location name pipe

--- a/src/app/shared/components/drive-card/drive-card.component.html
+++ b/src/app/shared/components/drive-card/drive-card.component.html
@@ -24,7 +24,7 @@
 				Sin pasajeros
 			</div>
 		</div>
-		<div class="basis-3/12">${{info.cost}} {{ info.currency }}</div>
+		<div class="basis-3/12">{{info.cost}} {{ info.currency }}</div>
 		<button
 			(click)="buttonClick($event)"
 			type="button"
