--- a/src/app/trip-details/trip-details.page.html
+++ b/src/app/trip-details/trip-details.page.html
@@ -21,12 +21,12 @@
 					<div class="basis-1/2">{{ trip.driver.passenger.name.value }}</div>
 				</div>
 				<div class="flex">
-					<div class="basis-1/2">Inicio</div>
+					<div class="basis-1/2">Direccion Inicio</div>
 					<div class="basis-1/2">{{trip.startLocation.name.value | parseLocationName}}</div>
 				</div>
 				<div class="flex">
 					<div class="basis-1/2">Direccion Fin</div>
-					<div class="basis-1/2">{{trip.endLocation.name.value}}</div>
+					<div class="basis-1/2">{{trip.endLocation.name.value | parseLocationName}}</div>
 				</div>
 				<div class="flex justify-center gap-4">
 					<app-adaptative-button text_color="text-white"
@@ -42,7 +42,7 @@
 						size="py-2.5 px-3"
 						font_size="text-sm"></app-adaptative-button>
 					<app-adaptative-button text_color="text-white"
-						[routerLink]="['/chat']"
+						(click)="onChatClick()"
 						color="bg-stone-800"
 						color_hover="bg-stone-800"
 						text="Chat"
