--- a/src/app/test/test.page.html
+++ b/src/app/test/test.page.html
@@ -1,11 +1,12 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>test</ion-title>
-  </ion-toolbar>
+	<ion-toolbar>
+		<ion-title>test</ion-title>
+	</ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <button class="w-20 h-20 bg-blue-400" (click)="onPhoto()">
-	  foto
-  </button>
+	<button class="w-20 h-20 bg-blue-400"
+		(click)="onPhoto()">
+		foto
+	</button>
 </ion-content>
