--- a/src/app/shared/components/bubble-chat/bubble-chat.component.html
+++ b/src/app/shared/components/bubble-chat/bubble-chat.component.html
@@ -17,10 +17,13 @@
 			*ngIf="!owner">
 			<div class="flex flex-col gap-2 rounded-xl p-2 bg-gray-300">
 				<div class="font-bold">
-					{{ userName }}
+					{{ userName }} {{ userLastName }}
 				</div>
 				<div>
 					{{ message }}
+				</div>
+				<div>
+					{{ timestamp | date: 'dd MMM HH:mm'}}
 				</div>
 			</div>
 		</div>
