--- a/src/app/trip-details/trip-details.page.html
+++ b/src/app/trip-details/trip-details.page.html
@@ -11,8 +11,7 @@
 					(click)="onChatClick()">chat
 				</mat-icon>
 				<button mat-icon-button
-					[matMenuTriggerFor]="menu"
-					aria-label="Example icon-button with a menu">
+					[matMenuTriggerFor]="menu">
 					<mat-icon>more_vert</mat-icon>
 				</button>
 				<mat-menu #menu="matMenu">
@@ -58,7 +57,7 @@
 				<div class="flex">
 					<div *ngIf="trip.passengers.length > 0"
 						(click)="activePassengerModalClick()"
-						class="flex basis-9/12 items-center gap-2">
+						class="w-full flex basis-9/12 items-center gap-2">
 						<ng-container *ngFor="let psn of trip.passengers">
 							<app-avatar-home url="https://media.discordapp.net/attachments/982116594543099924/1147603255032041642/5ni93d3zaera1.png?width=416&height=445"></app-avatar-home>
 						</ng-container>
@@ -82,7 +81,36 @@
 			text_color="text-white"></app-adaptative-button>
 	</ion-toolbar>
 </ion-header>
-<ng-template #modal1>
+<ng-template #activeModal>
+	<ng-container *ngIf="trip !== null">
+		<div *ngIf="trip.passengers.length === 0">No hay pasajeros inscritos</div>
+		<ng-container *ngFor="let psn of trip.passengers; index as i">
+			<div class="flex gap-3 items-center w-full justify-between">
+				<div
+					class="max-w-[50px] max-h-[50px] rounded-full shadow-md shadow-black/20">
+					<img class="object-fill aspect-square rounded-full"
+						[src]="psn.image.value"
+						[alt]="psn.name.value">
+				</div>
+				<div class="font-bold">
+					{{ psn.name.value }} {{ psn.lastName.value }}
+				</div>
+				<button mat-icon-button
+					[matMenuTriggerFor]="menuPsn">
+					<mat-icon>more_vert</mat-icon>
+				</button>
+				<mat-menu #menuPsn="matMenu">
+					<button mat-menu-item>
+						<mat-icon class="">warning</mat-icon>
+						<span class="text-red-600">Reportar</span>
+					</button>
+				</mat-menu>
+			</div>
+			<app-divider *ngIf="trip.queuePassengers.length - 1 !== i"></app-divider>
+		</ng-container>
+	</ng-container>
+</ng-template>
+<ng-template #queueModal>
 	<ng-container *ngIf="trip !== null">
 		<div *ngIf="trip.queuePassengers.length === 0">No hay pasajeros pendientes
 		</div>
