--- a/src/app/test/test.page.html
+++ b/src/app/test/test.page.html
@@ -1,12 +1,83 @@
-<ion-header [translucent]="true">
-	<ion-toolbar>
-		<ion-title>test</ion-title>
-	</ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-	<button class="w-20 h-20 bg-blue-400"
-		(click)="onPhoto()">
-		foto
-	</button>
+	<div class="h-full flex flex-col">
+		<app-app-bar-clone
+			class="basis-14 z-50"
+			label="test"
+		></app-app-bar-clone>
+		<div class="basis-full bg-red-200 overflow-y-auto">
+			<div>hola 0</div>
+			<div>hola 1</div>
+			<div>hola 2</div>
+			<div>hola 3</div>
+			<div>hola 4</div>
+			<div>hola 5</div>
+			<div>hola 6</div>
+			<div>hola 7</div>
+			<div>hola 8</div>
+			<div>hola 9</div>
+			<div>hola 10</div>
+			<div>hola 11</div>
+			<div>hola 12</div>
+			<div>hola 13</div>
+			<div>hola 14</div>
+			<div>hola 15</div>
+			<div>hola 16</div>
+			<div>hola 17</div>
+			<div>hola 18</div>
+			<div>hola 19</div>
+			<div>hola 20</div>
+			<div>hola 21</div>
+			<div>hola 22</div>
+			<div>hola 23</div>
+			<div>hola 24</div>
+			<div>hola 25</div>
+			<div>hola 26</div>
+			<div>hola 27</div>
+			<div>hola 28</div>
+			<div>hola 29</div>
+			<div>hola 30</div>
+			<div>hola 31</div>
+			<div>hola 32</div>
+			<div>hola 33</div>
+			<div>hola 34</div>
+			<div>hola 35</div>
+			<div>hola 36</div>
+			<div>hola 37</div>
+			<div>hola 38</div>
+			<div>hola 39</div>
+			<div>hola 40</div>
+			<div>hola 41</div>
+			<div>hola 42</div>
+			<div>hola 43</div>
+			<div>hola 44</div>
+			<div>hola 45</div>
+			<div>hola 46</div>
+			<div>hola 47</div>
+			<div>hola 48</div>
+			<div>hola 49</div>
+			<div>hola 50</div>
+			<div>hola 51</div>
+			<div>hola 52</div>
+			<div>hola 53</div>
+			<div>hola 54</div>
+			<div>hola 55</div>
+			<div>hola 56</div>
+			<div>hola 57</div>
+			<div>hola 58</div>
+			<div>hola 59</div>
+			<div>hola 60</div>
+			<div>hola 61</div>
+			<div>hola 62</div>
+			<div>hola 63</div>
+			<div>hola 64</div>
+			<div>hola 65</div>
+			<div>hola 66</div>
+			<div>hola 67</div>
+			<div>hola 68</div>
+			<div>hola 69</div>
+			<div>hola 70</div>
+			<div>hola 71</div>
+		</div>
+		<div class="basis-1/12 bg-blue-200">chat</div>
+	</div>
 </ion-content>
